# TeleGuard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  4.0.0  4.12.0  4.15.0  AUTO_DEVICE_SNOOP_IMPLEMENTATION.md  BACKUP_SYSTEM_IMPLEMENTATION.md  CHANGELOG.md  CHECK_BEFORE_WRITE_MODE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVICE_SNOOPER_TEST_RESULTS.md  Dockerfile  FEATURE_STATUS.md  INTEGRATION_EXAMPLE.md  LICENSE  Makefile  PR_NOTES.md  PUBLIC_SNAPSHOTS_README.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES.md  SECURITY_FIXES_SUMMARY.md  SELENIUM_SETUP.md  app.json  check_database.py  check_database_consistency.py  cleanup_orphaned_accounts.py  clear_auto_reply.py  clear_corrupted_data.py  clear_passwords.py  debug_accounts.py  debug_features.py  docker-compose.dev.yml  docker-compose.yml  fix_account_name.py  fix_features.py  (+23 more)
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  db-sync.yml  tests.yml
.koyeb/: app.yaml
config/: .env.example  requirements.txt
deploy/: KOYEB.md  heroku.sh  koyeb.sh
docs/: 2FA_FIX_SUMMARY.md  BACKUP_COMMANDS.md  DEVELOPMENT_GUIDE.md  FULLCLIENT_IMPLEMENTATION.md  REPO_2FA_SCAN.md  REPO_ANALYSIS.md  REPO_SESSION_SCAN.md  SECURE_2FA_IMPLEMENTATION.md  SESSION_BACKUP_IMPLEMENTATION.md  SESSION_BACKUP_QA_CHECKLIST.md  SESSION_BACKUP_SUMMARY.md  UPGRADE_GUIDE.md  manual_qa_checklist.md
migrations/: __init__.py
monitoring/: prometheus.yml
scripts/: compact_db_branch.py  fullclient_migrations.py  migrate_local_db_to_github.py  migrate_otp_fields.py  migrate_to_session_backup.py  migrations.py  otp_destroyer_example.py  setup.py  setup_dev.py
src/: __init__.py  auth_handler.py  automation_engine.py  bot.py  config.py  crypto_utils.py  database.py  fullclient_manager.py  menu_system.py  messaging_manager.py  models.py  mongo_store.py  otp_destroyer_enhanced.py  secure_2fa_handlers.py  session_backup.py  session_scheduler.py  telethon_2fa_helpers.py
teleguard/: __init__.py  db_helpers.py  github_db.py  local_db.py
teleguard/api/: __init__.py  routes.py
teleguard/core/: __init__.py  async_client_manager.py  audit_integration.py  automation.py  bot_manager.py  client_manager.py  comprehensive_audit.py  config.py  contact_db.py  contact_models.py  contact_sync.py  database.py  db_pool.py  device_snooper.py  exceptions.py  messaging.py  models.py  mongo_database.py  otp_destroyer.py  otp_manager.py  task_queue.py
teleguard/data/: appeal_messages.txt
teleguard/handlers/: __init__.py  activity_log_handler.py  admin_handlers.py  auth_handler.py  auto_reply_handler.py  bulk_sender.py  channel_manager.py  chat_import_handler.py  command_handlers.py  contact_export_handler.py  contact_handler.py  device_handler.py  dm_reply_commands.py  dm_reply_handler.py  enhanced_audit_handler.py  help_commands.py  menu_system.py  message_handlers.py  offline_commands.py  online_maker.py  otp_commands.py  otp_password_handler.py  secure_2fa_handlers.py  sessions_handler.py  simulation_commands.py  simulation_handlers.py  spam_appeal_handler.py  start_handler.py  startup_commands.py  startup_config_commands.py  temp_otp_cleanup.py  template_handler.py  topic_dm_handler.py  twofa_commands.py  unified_messaging.py
teleguard/services/: __init__.py
teleguard/sync/: README.md  __init__.py  backups.py  crypto.py  db.py  github_sync.py  scheduler.py  telegram_backup.py
teleguard/ui/: __init__.py  enhanced_menu.py  web_interface.py
teleguard/utils/: __init__.py  account_helpers.py  api_security.py  auth_helpers.py  authorization.py  captcha_bypass.py  cloud_bot_manager.py  crypto_utils.py  data_encryption.py  error_messages.py  health_check.py  health_server.py  input_sanitizer.py  input_validator.py  logger.py  mongo_store.py  network_helpers.py  rate_limiter.py  secure_crypto.py  secure_database.py  secure_hash.py  secure_password.py  security.py  selenium_check.py  session_backup.py  session_backup_helpers.py  session_manager.py  session_scheduler.py  startup_optimizer.py  turnstile_bypass.py  validators.py
teleguard/workers/: __init__.py  activity_simulator.py  automation_worker.py  online_maker_worker.py
